Completed addTask functionality for the toDo section

--- a/index.html
+++ b/index.html
@@ -109,24 +109,43 @@
                 <div id="toDo">
                     <h4>To Do</h4>
                     <button id="addTaskTD">+ Add New Task</button>
-
+                    <div id="inputAreaTD" class="card toggleDisplay">
+                        <input type="text" id="inputTitleTD" placeholder="Add Title">
+                        <textarea id="inputDescriptionTD" placeholder="Add Description"></textarea>
+                        <button id="inputSaveTD">Save Task</button>
+                    </div>
                 </div>
                 <div id="inProgress">
                     <h4>In Progress</h4>
                     <button id="addTaskIP">+ Add New Task</button>
+                    <div id="inputAreaIP" class="card toggleDisplay">
+                        <input type="text" id="inputTitleIP" placeholder="Add Title">
+                        <textarea id="inputDescriptionIP" placeholder="Add Description"></textarea>
+                        <button id="inputSaveIP">Save Task</button>
+                    </div>
                 </div>
                 <div id="needReview">
                     <h4>Need Review</h4>
                     <button id="addTaskNR">+ Add New Task</button>
+                    <div id="inputAreaNR" class="card toggleDisplay">
+                        <input type="text" id="inputTitleNR" placeholder="Add Title">
+                        <textarea id="inputDescriptionNR" placeholder="Add Description"></textarea>
+                        <button id="inputSaveNR">Save Task</button>
+                    </div>
                 </div>
                 <div id="done">
                     <h4>Done</h4>
                     <button id="addTaskDone">+ Add New Task</button>
+                    <div id="inputAreaDone" class="card toggleDisplay">
+                        <input type="text" id="inputTitleDone" placeholder="Add Title">
+                        <textarea id="inputDescriptionDone" placeholder="Add Description"></textarea>
+                        <button id="inputSaveDone">Save Task</button>
+                    </div>
                 </div>
             </div>
             <div class="notes"></div>
             <div class="questions"></div>
-            
+
         </div>
     </div>
 </body>
