Complete functionality for adding and deleting tasks.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         <button id="inputSaveIP">Save Task</button>
                     </div>
                 </div>
-                <div id="needReview">
-                    <h4>Need Review</h4>
+                <div id="needsReview">
+                    <h4>Needs Review</h4>
                     <button id="addTaskNR">+ Add New Task</button>
                     <div id="inputAreaNR" class="card toggleDisplay">
                         <input type="text" id="inputTitleNR" placeholder="Add Title">
