Refine scss variables for better styles. Apply google font Quicksand.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="tasks activeProject">
                 <div id="toDo">
                     <h4>To Do</h4>
-                    <button id="addTaskTD">+ Add New Task</button>
+                    <button id="addTaskTD" class ="addTaskButton">+ Add New Task</button>
                     <div id="inputAreaTD" class="card toggleDisplay">
                         <input type="text" id="inputTitleTD" placeholder="Add Title">
                         <textarea id="inputDescriptionTD" placeholder="Add Description"></textarea>
@@ -120,7 +120,7 @@
                 </div>
                 <div id="inProgress">
                     <h4>In Progress</h4>
-                    <button id="addTaskIP">+ Add New Task</button>
+                    <button id="addTaskIP" class ="addTaskButton">+ Add New Task</button>
                     <div id="inputAreaIP" class="card toggleDisplay">
                         <input type="text" id="inputTitleIP" placeholder="Add Title">
                         <textarea id="inputDescriptionIP" placeholder="Add Description"></textarea>
@@ -129,7 +129,7 @@
                 </div>
                 <div id="needsReview">
                     <h4>Needs Review</h4>
-                    <button id="addTaskNR">+ Add New Task</button>
+                    <button id="addTaskNR" class ="addTaskButton">+ Add New Task</button>
                     <div id="inputAreaNR" class="card toggleDisplay">
                         <input type="text" id="inputTitleNR" placeholder="Add Title">
                         <textarea id="inputDescriptionNR" placeholder="Add Description"></textarea>
@@ -138,7 +138,7 @@
                 </div>
                 <div id="done">
                     <h4>Done</h4>
-                    <button id="addTaskDone">+ Add New Task</button>
+                    <button id="addTaskDone" class ="addTaskButton">+ Add New Task</button>
                     <div id="inputAreaDone" class="card toggleDisplay">
                         <input type="text" id="inputTitleDone" placeholder="Add Title">
                         <textarea id="inputDescriptionDone" placeholder="Add Description"></textarea>
