Correcting code for less repeating code

--- a/index.html
+++ b/index.html
@@ -112,37 +112,37 @@
                 <div id="toDo">
                     <h4>To Do</h4>
                     <button id="addTaskTD" class ="addTaskButton">+ Add New Task</button>
-                    <div id="inputAreaTD" class="card toggleDisplay">
-                        <input type="text" id="inputTitleTD" placeholder="Add Title">
-                        <textarea id="inputDescriptionTD" placeholder="Add Description"></textarea>
-                        <button id="inputSaveTD">Save Task</button>
+                    <div id="inputAreaTD" class="card inputArea toggleDisplay">
+                        <input type="text" id="inputTitleTD" class="inputTitle" placeholder="Add Title">
+                        <textarea id="inputDescriptionTD" class="inputDescription" placeholder="Add Description"></textarea>
+                        <button id="inputSaveTD" class="saveTask">Save Task</button>
                     </div>
                 </div>
                 <div id="inProgress">
                     <h4>In Progress</h4>
                     <button id="addTaskIP" class ="addTaskButton">+ Add New Task</button>
-                    <div id="inputAreaIP" class="card toggleDisplay">
-                        <input type="text" id="inputTitleIP" placeholder="Add Title">
-                        <textarea id="inputDescriptionIP" placeholder="Add Description"></textarea>
-                        <button id="inputSaveIP">Save Task</button>
+                    <div id="inputAreaIP" class="card inputArea toggleDisplay">
+                        <input type="text" id="inputTitleIP" class="inputTitle" placeholder="Add Title">
+                        <textarea id="inputDescriptionIP" class="inputDescription" placeholder="Add Description"></textarea>
+                        <button id="inputSaveIP" class="saveTask">Save Task</button>
                     </div>
                 </div>
                 <div id="needsReview">
                     <h4>Needs Review</h4>
                     <button id="addTaskNR" class ="addTaskButton">+ Add New Task</button>
-                    <div id="inputAreaNR" class="card toggleDisplay">
-                        <input type="text" id="inputTitleNR" placeholder="Add Title">
-                        <textarea id="inputDescriptionNR" placeholder="Add Description"></textarea>
-                        <button id="inputSaveNR">Save Task</button>
+                    <div id="inputAreaNR" class="card inputArea toggleDisplay">
+                        <input type="text" id="inputTitleNR" class="inputTitle" placeholder="Add Title">
+                        <textarea id="inputDescriptionNR" class="inputDescription" placeholder="Add Description"></textarea>
+                        <button id="inputSaveNR" class="saveTask">Save Task</button>
                     </div>
                 </div>
                 <div id="done">
                     <h4>Done</h4>
                     <button id="addTaskDone" class ="addTaskButton">+ Add New Task</button>
-                    <div id="inputAreaDone" class="card toggleDisplay">
-                        <input type="text" id="inputTitleDone" placeholder="Add Title">
-                        <textarea id="inputDescriptionDone" placeholder="Add Description"></textarea>
-                        <button id="inputSaveDone">Save Task</button>
+                    <div id="inputAreaDone" class="card inputArea toggleDisplay">
+                        <input type="text" id="inputTitleDone" class="inputTitle" placeholder="Add Title">
+                        <textarea id="inputDescriptionDone" class="inputDescription" placeholder="Add Description"></textarea>
+                        <button id="inputSaveDone" class="saveTask">Save Task</button>
                     </div>
                 </div>
             </div>
