Add ability to include bulletpoint items in the tasks | Remove the display of extraneous HTML elements temporarily | Update some styles for better display

--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
                     <div id="inputAreaTD" class="card inputArea toggleDisplay">
                         <input type="text" id="inputTitleTD" class="inputTitle" placeholder="Add Title">
                         <textarea id="inputDescriptionTD" class="inputDescription" placeholder="Add Description"></textarea>
-                        <button id="inputSaveTD" class="saveTask">Save Task</button>
+                        <div class="itemList">
+                            <input type="text" class="inputli" placeholder="Add a bullet point">
+                        </div>
+                        <button class="addItem">Add Item</button>
+                        <button class="saveTask">Save Task</button>
                         <button class="cancelTask">Cancel</button>
                     </div>
                 </div>
