Correct HTML code to ensure bulletpoints work across every category.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
                     <div id="inputAreaIP" class="card inputArea toggleDisplay">
                         <input type="text" id="inputTitleIP" class="inputTitle" placeholder="Add Title">
                         <textarea id="inputDescriptionIP" class="inputDescription" placeholder="Add Description"></textarea>
-                        <button id="inputSaveIP" class="saveTask">Save Task</button>
+                        <div class="itemList">
+                            <input type="text" class="inputli" placeholder="Add a bullet point">
+                        </div>
+                        <button class="addItem">Add Item</button>
+                        <button class="saveTask">Save Task</button>
                         <button class="cancelTask">Cancel</button>
                     </div>
                 </div>
@@ -139,7 +143,11 @@
                     <div id="inputAreaNR" class="card inputArea toggleDisplay">
                         <input type="text" id="inputTitleNR" class="inputTitle" placeholder="Add Title">
                         <textarea id="inputDescriptionNR" class="inputDescription" placeholder="Add Description"></textarea>
-                        <button id="inputSaveNR" class="saveTask">Save Task</button>
+                        <div class="itemList">
+                            <input type="text" class="inputli" placeholder="Add a bullet point">
+                        </div>
+                        <button class="addItem">Add Item</button>
+                        <button class="saveTask">Save Task</button>
                         <button class="cancelTask">Cancel</button>
                     </div>
                 </div>
@@ -149,7 +157,11 @@
                     <div id="inputAreaDone" class="card inputArea toggleDisplay">
                         <input type="text" id="inputTitleDone" class="inputTitle" placeholder="Add Title">
                         <textarea id="inputDescriptionDone" class="inputDescription" placeholder="Add Description"></textarea>
-                        <button id="inputSaveDone" class="saveTask">Save Task</button>
+                        <div class="itemList">
+                            <input type="text" class="inputli" placeholder="Add a bullet point">
+                        </div>
+                        <button class="addItem">Add Item</button>
+                        <button class="saveTask">Save Task</button>
                         <button class="cancelTask">Cancel</button>
                     </div>
                 </div>
